Added "want to learn" in edit profile

--- a/PJA_Skills_032/App.xaml
+++ b/PJA_Skills_032/App.xaml
@@ -109,7 +109,11 @@
             <Setter Property="UseSystemFocusVisuals" Value="True" />
 
         </Style>
-
+        <DataTemplate x:Key="SkillGridViewTemplate">
+            <StackPanel>
+                <TextBlock Text="{Binding Name}" />
+            </StackPanel>
+        </DataTemplate>
 
 
     </Application.Resources>
