--- a/PJA_Skills_032/Pages/EditMyProfilePage.xaml
+++ b/PJA_Skills_032/Pages/EditMyProfilePage.xaml
@@ -6,5 +6,37 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-    <RelativePanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
+    <RelativePanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBlock x:Name="TextBlockFullName"
+                   Height="20"
+                   Text="Full Name"
+                   TextWrapping="Wrap" />
+        <TextBox x:Name="TextBoxFullName"
+                 Height="32"
+                 RelativePanel.Below="TextBlockFullName"
+                 Text="Bob Marley"
+                 TextWrapping="Wrap" />
+
+        <TextBlock x:Name="TextBlockWantLearn"
+                   Height="20" 
+                   RelativePanel.Below="TextBoxFullName"
+                   Text="What do I want to learn:"
+                   TextWrapping="Wrap" />
+
+        <StackPanel x:Name="StackPanelToLearn"
+                        Grid.Row="2" RelativePanel.Below="TextBlockWantLearn"
+                        Grid.ColumnSpan="2"
+                        Style="{StaticResource ProfileCard}">
+            <TextBlock Height="21"
+                           Margin="9,3,9,0"
+                           Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
+                           Text="Want to learn:"
+                           TextWrapping="Wrap" />
+            <GridView x:Name="GridViewLearn"
+                          ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
+                          ItemTemplate="{StaticResource SkillGridViewTemplate}"
+                          ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}" />
+        </StackPanel>
+
+    </RelativePanel>
 </Page>
