Want to learn showes

--- a/PJA_Skills_032/Pages/EditMyProfilePage.xaml
+++ b/PJA_Skills_032/Pages/EditMyProfilePage.xaml
@@ -4,6 +4,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="using:PJA_Skills_032.Pages"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      Loading="EditMyProfilePage_OnLoading"
       mc:Ignorable="d">
 
     <RelativePanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -18,24 +19,25 @@
                  TextWrapping="Wrap" />
 
         <TextBlock x:Name="TextBlockWantLearn"
-                   Height="20" 
+                   Height="20"
                    RelativePanel.Below="TextBoxFullName"
                    Text="What do I want to learn:"
                    TextWrapping="Wrap" />
 
         <StackPanel x:Name="StackPanelToLearn"
-                        Grid.Row="2" RelativePanel.Below="TextBlockWantLearn"
-                        Grid.ColumnSpan="2"
-                        Style="{StaticResource ProfileCard}">
+                    Grid.Row="2"
+                    Grid.ColumnSpan="2"
+                    RelativePanel.Below="TextBlockWantLearn"
+                    Style="{StaticResource ProfileCard}">
             <TextBlock Height="21"
-                           Margin="9,3,9,0"
-                           Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
-                           Text="Want to learn:"
-                           TextWrapping="Wrap" />
+                       Margin="9,3,9,0"
+                       Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
+                       Text="Want to learn:"
+                       TextWrapping="Wrap" />
             <GridView x:Name="GridViewLearn"
-                          ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
-                          ItemTemplate="{StaticResource SkillGridViewTemplate}"
-                          ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}" />
+                      ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
+                      ItemTemplate="{StaticResource SkillGridViewTemplate}"
+                      ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}" />
         </StackPanel>
 
     </RelativePanel>
