--- a/PJA_Skills_032/Pages/OffersPage.xaml
+++ b/PJA_Skills_032/Pages/OffersPage.xaml
@@ -2,13 +2,21 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:data="using:PJA_Skills_032.Model" Loaded="Offers_OnLoaded"
       xmlns:local="using:PJA_Skills_032.Pages"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
 
+
     <Page.Resources>
-        <DataTemplate x:Key="OffersGridViewTemplate" />
+        <DataTemplate x:Key="OffersGridViewTemplate" x:DataType="data:Offer">
+            <StackPanel Orientation="Vertical">
+                <!--<TextBlock x:Name="TextBlockUserName" Text="{x:Bind User.Name}" />-->
+                <TextBlock x:Name="TextBlockContent" Text="{x:Bind Content}" />
+                
+            </StackPanel>
+        </DataTemplate>
     </Page.Resources>
     <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
         <StackPanel Orientation="Vertical">
@@ -20,3 +28,6 @@
 
     </ScrollViewer>
 </Page>
+
+
+
