--- a/PJA_Skills_032/Pages/OffersPage.xaml
+++ b/PJA_Skills_032/Pages/OffersPage.xaml
@@ -2,9 +2,10 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:data="using:PJA_Skills_032.Model" Loaded="Offers_OnLoaded"
+      xmlns:data="using:PJA_Skills_032.Model"
       xmlns:local="using:PJA_Skills_032.Pages"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      Loaded="Offers_OnLoaded"
       mc:Ignorable="d">
 
 
@@ -17,20 +18,25 @@
             <AppBarButton x:Name="AppBarButtonAddNewOffer"
                           Click="AppBarButtonAddNewOffer_OnClick"
                           Foreground="White"
-                          Icon="Edit"
+                          Icon="Add"
                           Label="Edit" />
         </CommandBar>
     </Page.BottomAppBar>
-    
+
     <Page.Resources>
+        <!--  DATATEMPLATE OF OFFER  -->
         <DataTemplate x:Key="OffersGridViewTemplate" x:DataType="data:Offer">
             <StackPanel Orientation="Vertical">
-                <!--<TextBlock x:Name="TextBlockUserName" Text="{x:Bind User.Name}" />-->
+                <StackPanel>
+                    <TextBlock x:Name="TextBlockUserName" Text="{x:Bind User.Name}" />
+                </StackPanel>
                 <TextBlock x:Name="TextBlockContent" Text="{x:Bind Content}" />
                 
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
+
+
     <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
         <StackPanel Orientation="Vertical">
             <GridView x:Name="GridViewOffers"
