--- a/PJA_Skills_032/Pages/LoginPage.xaml
+++ b/PJA_Skills_032/Pages/LoginPage.xaml
@@ -2,14 +2,14 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:PJA_Skills_032.Pages"
+      xmlns:local="using:PJA_Skills_032.Pages" Loaded="LoginPage_OnLoaded"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
     <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <TextBox x:Name="TxtLogin" PlaceholderText="Login..." />
         <TextBox x:Name="TxtPassword" PlaceholderText="Password..." />
-        <Button x:Name="BtnLogin" Content="Login" />
+        <Button x:Name="BtnLogin" Content="Login" Click="BtnLogin_OnClick" />
     </StackPanel>
 </Page>
 
