teach autosuggestBox functions

--- a/PJA_Skills_032/Pages/SignupPage.xaml
+++ b/PJA_Skills_032/Pages/SignupPage.xaml
@@ -12,6 +12,8 @@
         <PasswordBox x:Name="TxtPassword" PlaceholderText="Password" />
         <TextBox x:Name="TxtFullName" PlaceholderText="Full name" />
 
+        
+        <!--LEARN-->
         <StackPanel MinWidth="300" Orientation="Horizontal">
             <AutoSuggestBox x:Name="AutoSuggestBoxLearn"
                             Width="300"
@@ -29,9 +31,33 @@
                 </AutoSuggestBox.ItemTemplate>
             </AutoSuggestBox>
         </StackPanel>
+        
+        <!--TEACH-->
         <GridView x:Name="GridViewLearn"
                   ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
                   ItemTemplate="{StaticResource SkillGridViewTemplate}" />
+
+        <StackPanel MinWidth="300" Orientation="Horizontal">
+            <AutoSuggestBox x:Name="AutoSuggestBoxTeach"
+                            Width="300"
+                            Header="What subjects would you like to teach others?"
+                            PlaceholderText="type here..."
+                            QueryIcon="Accept"
+                            SuggestionChosen="AutoSuggestBoxTeach_OnSuggestionChosen"
+                            TextChanged="AutoSuggestBoxTeach_OnTextChanged">
+                <AutoSuggestBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding Name}" TextWrapping="Wrap" />
+                        </StackPanel>
+                    </DataTemplate>
+                </AutoSuggestBox.ItemTemplate>
+            </AutoSuggestBox>
+        </StackPanel>
+        <GridView x:Name="GridViewTeach"
+                  ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
+                  ItemTemplate="{StaticResource SkillGridViewTemplate}" />
+
         <Button x:Name="ButtonSignUp" Content="Sign Up" Click="ButtonSignUp_OnClick" />
     </StackPanel>
 
